# automotive-format-explorer

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  build.sh  project_status.md  roadmap.md
.github/workflows/: ci.yml  release.yml
cmake/: DeployMsys2Deps.cmake  FetchParserLib.cmake
docs/: backlog.md  memory_view.md  memory_view_plan.md  signal_map.md  signal_map_dbc_ldf.md
docs/arch/: adapter_contract.md  architecture.md
docs/plans/: memory_view_planned.md
docs/ref/: cmake_build_system.md  keyboard.md  memory_view.md  signal_map.md
qml/: Main.qml
qml/components/: MemoryView.qml  NavPanel.qml  SignalMapView.qml  SplashOverlay.qml  Theme.qml  Toast.qml
resources/: explorer.rc
src/: main.cpp
src/adapters/: a2ladapter.cpp  a2ladapter.h  dbcadapter.cpp  dbcadapter.h  formatadapter.h  ldfadapter.cpp  ldfadapter.h
src/core/: appcontroller.cpp  appcontroller.h  detailpresenter.h  detailsection.h  diagnostics.h  formatid.h  formatregistry.cpp  formatregistry.h  noderegistry.cpp  noderegistry.h  proto_json_compat.h  treeitem.h
src/models/: detailmodel.cpp  detailmodel.h  memorymapmodel.cpp  memorymapmodel.h  signalmapmodel.cpp  signalmapmodel.h  tabmodel.cpp  tabmodel.h  treemodel.cpp  treemodel.h
src/sessions/: a2ldetailpresenter.cpp  a2ldetailpresenter.h  a2ldetailpresenter_ifdata.cpp  a2ldocumentsession.cpp  a2ldocumentsession.h  adaptersessionbase.cpp  adaptersessionbase.h  dbcdetailpresenter.cpp  dbcdetailpresenter.h  dbcdocumentsession.cpp  dbcdocumentsession.h  documentsession.h  ldfdetailpresenter.cpp  ldfdetailpresenter.h  ldfdocumentsession.cpp  ldfdocumentsession.h
src/ui/: memorygriditem.cpp  memorygriditem.h  signalgriditem.cpp  signalgriditem.h
